--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1373,6 +1373,7 @@
 	}
 	.post-feed-nav {
 		position: relative;
+		z-index: 1;
 		.slick-arrow {
 			position: absolute;
 			top: 100%;
